--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Document</title>
   </head>
   <body>
-    <%- include('./partials/_navbar.ejs') %>
+    <h1><%foods.foods.forEach((food)=>{%>
+      <li><%=food.name%> </li> 
+       <%})%>
+      </h1>
   </body>
 </html>
